nodejs/ocp/01/templates/dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    generation: 2
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455113742"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/ace
    uid: 3e1a3d0c-a372-11ea-9655-0a580a8100f0
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: ace
      deploymentconfig: ace
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: ace
          deploymentconfig: ace
      spec:
        containers:
        - env:
          - name: REDIS
            value: redis:6379
          - name: REDIS_PASSWORD
            value: r3dh4t01!
          image: image-registry.openshift-image-registry.svc:5000/exceptions/ace@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
          imagePullPolicy: Always
          name: ace
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ace
        from:
          kind: ImageStreamTag
          name: ace:latest
          namespace: exceptions
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/exceptions/ace@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T19:12:06Z"
      lastUpdateTime: "2020-05-31T19:12:06Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T19:12:07Z"
      lastUpdateTime: "2020-05-31T19:12:07Z"
      message: replication controller "ace-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: "2020-05-31T19:06:45Z"
    generation: 2
    labels:
      app: redis-ephemeral
      template: redis-ephemeral-template
    name: redis
    namespace: exceptions
    resourceVersion: "455109134"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/redis
    uid: df32b0c2-a371-11ea-a6ee-0a580a820124
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: redis
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: redis-ephemeral
          name: redis
      spec:
        containers:
        - env:
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: redis
          image: image-registry.openshift-image-registry.svc:5000/openshift/redis@sha256:407c34e8042818fb860a9df0dcc758cfd7abe75171c5bfcb0fe4c89acc099985
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6379
            timeoutSeconds: 1
          name: redis
          ports:
          - containerPort: 6379
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping)" == "PONG"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/redis/data
            name: redis-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: redis-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - redis
        from:
          kind: ImageStreamTag
          name: redis:3.2
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/redis@sha256:407c34e8042818fb860a9df0dcc758cfd7abe75171c5bfcb0fe4c89acc099985
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T19:07:13Z"
      lastUpdateTime: "2020-05-31T19:07:13Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T19:07:14Z"
      lastUpdateTime: "2020-05-31T19:07:14Z"
      message: replication controller "redis-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
