nodejs/ocp/01/templates/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455111146"
    selfLink: /api/v1/namespaces/exceptions/services/workshops
    uid: 3e495e78-a372-11ea-bbb3-0698e01dcbf2
  spec:
    clusterIP: 172.30.241.90
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: workshops
      deploymentconfig: workshops
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
